syntax = "proto3";

package service.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/service/v1/error_reason.proto";
import "api/service/v1/message.proto";

option go_package = "api/service/v1;v1";

service ServiceService {
      rpc GetOceanService(google.protobuf.Empty) returns (service.v1.Service) {
            option (google.api.http) = {
              get: "/service/v1/get/ocean"
            };
      }
}